--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
         <div class="hero">
             <div class="floating-hearts" id="heartsContainer"></div>
             <h1>Happy Birthday, Cupcake! 🧁</h1>
-            <p class="subtitle">To the sweetest person in my world</p>
+            <p class="subtitle">To the sweetest person in the world</p>
             <p style="font-size: 1.2em; opacity: 0.8;">October 17, 2025</p>
         </div>
 
@@ -353,48 +353,15 @@
         <div class="section">
             <h2>A Letter From Your Pookie 💌</h2>
             <div class="letter">
-                <p>My Dearest Jaan,</p>
+                <p>Jaan,</p>
                 <br>
                 <p>As you turn another year more beautiful, I find myself miles away but closer to you than ever in my heart. Distance means so little when someone means so much, and you, my love, mean everything to me.</p>
                 <br>
-                <p>Every moment we've shared, from that first train ride to Patna where you rested on my lap, to those stolen glances at V Mart when the lights went out and my heart raced faster than ever - they're all treasured memories that I carry with me always.</p>
+                <p>Every moment we've shared, from that first train ride where you rested on my lap, to those stolen glances at the Navratri Mela and my heart raced faster than ever - they're all treasured memories that I carry with me always.</p>
                 <br>
                 <p>You're not just my Cupcake, you're my sweetest dream come true. Your brown eyes hold entire galaxies, your smile lights up my darkest days, and your presence makes every moment magical.</p>
                 <br>
                 <p>Today, I wish I could be there to hold your hand, to see your smile, to make you feel as special as you make me feel every single day. But until we meet again, know that my love travels across every mile to reach you.</p>
-            </div>
-        </div>
-
-        <!-- Our Memories Section -->
-        <div class="section">
-            <h2>Our Beautiful Journey 🌟</h2>
-            
-            <div class="memory-card">
-                <div class="memory-date">March 21, 2025 - The Train to Patna 🚂</div>
-                <div class="memory-text">
-                    The day that changed everything. We talked freely, face to face, and time just stopped. You rested on my lap, and I gave you a head massage while you dozed off. We shared pizza and 7UP, but what we really shared was something much deeper. When I reached Patna, I felt so alone because I'd left my heart with you.
-                </div>
-            </div>
-
-            <div class="memory-card">
-                <div class="memory-date">April 2, 2025 - Parasnath Meeting 💫</div>
-                <div class="memory-text">
-                    You weren't feeling well, but seeing you on your way back made everything better. Even in those moments, you were the most beautiful thing I'd ever seen.
-                </div>
-            </div>
-
-            <div class="memory-card">
-                <div class="memory-date">April 22, 2025 - V Mart (Our First Real Date) 💕</div>
-                <div class="memory-text">
-                    Our first outside meet after we confessed our feelings. I held your hand, and I got completely lost in your eyes. That moment felt like the world had disappeared and it was just us two.
-                </div>
-            </div>
-
-            <div class="memory-card">
-                <div class="memory-date">May 5, 2025 - The Light Cut Moment ⚡</div>
-                <div class="memory-text">
-                    You planned this day for us. When the lights suddenly went out at V Mart, my heart started beating so fast. In that darkness, I got to gaze at you, and even though it was short, it was absolutely memorable. Every second with you is precious.
-                </div>
             </div>
         </div>
 
@@ -407,7 +374,7 @@
                 <p style="opacity: 0.7; margin-top: 10px;">(Click to reveal)</p>
                 <div class="reveal-content" id="reveal1">
                     <p style="margin-top: 20px; line-height: 1.8;">
-                        I love how you call me Pookie, Janu, and Janemann - each name feels like a warm hug. I love your brown eyes that hold so much depth and warmth. I love how you enjoy simple things like kiwis and mangoes. I love that you dream of Vrindavan and Barsana. I love your gentle spirit that adores cows and puppies. I love everything about you, from your 5'2" frame to your beautiful black hair. But most of all, I love your heart - the way you care, the way you love, the way you make me feel like the luckiest person alive.
+                        I love how you call me Pookie, Janu, and Janemann - each name feels like a warm hug. I love your brown eyes that hold so much depth and warmth. I love how you enjoy simple things. I love everything about you, But most of all, I love your heart - the way you care, the way you love, the way you make me feel like the luckiest person alive.
                     </p>
                 </div>
             </div>
