--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             <input type="password" id="passwordInput" placeholder="Enter password">
             <br>
             <button onclick="checkPassword()">Unlock</button>
-            <p class="error-message" id="errorMessage">Incorrect password. Try again!</p>
+            <p class="error-message" id="errorMessage">Come on! Its not that Harder </p>
         </div>
     </div>
 
